// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should render Elevate correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  rounded-1200 bg-opacity-white-800 shadow-330 border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.195 18.297c.547-.052.86-.365.938-.938-.078-.573-.39-.885-.938-.937-.573.052-.885.364-.937.937.052.573.364.886.937.938Zm-10.39 0c.573-.052.885-.365.937-.938-.052-.573-.364-.885-.937-.937-.547.052-.86.364-.938.937.078.573.39.886.938.938Zm10.703-5.664c1.64.911 2.956 2.135 3.945 3.672 1.016 1.51 1.615 3.242 1.797 5.195H4.75c.182-1.953.781-3.685 1.797-5.195.99-1.537 2.305-2.76 3.945-3.672L8.617 9.39A.42.42 0 0 1 8.578 9a.384.384 0 0 1 .352-.195c.156 0 .273.065.351.195l1.914 3.32A11.42 11.42 0 0 1 16 11.266c1.667 0 3.268.351 4.805 1.054L22.719 9a.384.384 0 0 1 .351-.195c.157 0 .274.065.352.195a.42.42 0 0 1-.04.39l-1.874 3.243Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.93c-.287.26-.573.26-.86 0l-7.5-7.5c-.26-.287-.26-.573 0-.86.287-.26.573-.26.86 0L16 20.602l7.07-7.032c.287-.26.573-.26.86 0 .26.287.26.573 0 .86l-7.5 7.5Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render Fill correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  rounded-1200 bg-solid-slate-50 border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.195 18.297c.547-.052.86-.365.938-.938-.078-.573-.39-.885-.938-.937-.573.052-.885.364-.937.937.052.573.364.886.937.938Zm-10.39 0c.573-.052.885-.365.937-.938-.052-.573-.364-.885-.937-.937-.547.052-.86.364-.938.937.078.573.39.886.938.938Zm10.703-5.664c1.64.911 2.956 2.135 3.945 3.672 1.016 1.51 1.615 3.242 1.797 5.195H4.75c.182-1.953.781-3.685 1.797-5.195.99-1.537 2.305-2.76 3.945-3.672L8.617 9.39A.42.42 0 0 1 8.578 9a.384.384 0 0 1 .352-.195c.156 0 .273.065.351.195l1.914 3.32A11.42 11.42 0 0 1 16 11.266c1.667 0 3.268.351 4.805 1.054L22.719 9a.384.384 0 0 1 .351-.195c.157 0 .274.065.352.195a.42.42 0 0 1-.04.39l-1.874 3.243Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.93c-.287.26-.573.26-.86 0l-7.5-7.5c-.26-.287-.26-.573 0-.86.287-.26.573-.26.86 0L16 20.602l7.07-7.032c.287-.26.573-.26.86 0 .26.287.26.573 0 .86l-7.5 7.5Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render Flush correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  border-100 border-b-opacity-black-100 !border-t-none border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100 rounded-50"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.195 18.297c.547-.052.86-.365.938-.938-.078-.573-.39-.885-.938-.937-.573.052-.885.364-.937.937.052.573.364.886.937.938Zm-10.39 0c.573-.052.885-.365.937-.938-.052-.573-.364-.885-.937-.937-.547.052-.86.364-.938.937.078.573.39.886.938.938Zm10.703-5.664c1.64.911 2.956 2.135 3.945 3.672 1.016 1.51 1.615 3.242 1.797 5.195H4.75c.182-1.953.781-3.685 1.797-5.195.99-1.537 2.305-2.76 3.945-3.672L8.617 9.39A.42.42 0 0 1 8.578 9a.384.384 0 0 1 .352-.195c.156 0 .273.065.351.195l1.914 3.32A11.42 11.42 0 0 1 16 11.266c1.667 0 3.268.351 4.805 1.054L22.719 9a.384.384 0 0 1 .351-.195c.157 0 .274.065.352.195a.42.42 0 0 1-.04.39l-1.874 3.243Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.93c-.287.26-.573.26-.86 0l-7.5-7.5c-.26-.287-.26-.573 0-.86.287-.26.573-.26.86 0L16 20.602l7.07-7.032c.287-.26.573-.26.86 0 .26.287.26.573 0 .86l-7.5 7.5Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render Outline correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  rounded-1200 border-sm border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.195 18.297c.547-.052.86-.365.938-.938-.078-.573-.39-.885-.938-.937-.573.052-.885.364-.937.937.052.573.364.886.937.938Zm-10.39 0c.573-.052.885-.365.937-.938-.052-.573-.364-.885-.937-.937-.547.052-.86.364-.938.937.078.573.39.886.938.938Zm10.703-5.664c1.64.911 2.956 2.135 3.945 3.672 1.016 1.51 1.615 3.242 1.797 5.195H4.75c.182-1.953.781-3.685 1.797-5.195.99-1.537 2.305-2.76 3.945-3.672L8.617 9.39A.42.42 0 0 1 8.578 9a.384.384 0 0 1 .352-.195c.156 0 .273.065.351.195l1.914 3.32A11.42 11.42 0 0 1 16 11.266c1.667 0 3.268.351 4.805 1.054L22.719 9a.384.384 0 0 1 .351-.195c.157 0 .274.065.352.195a.42.42 0 0 1-.04.39l-1.874 3.243Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.93c-.287.26-.573.26-.86 0l-7.5-7.5c-.26-.287-.26-.573 0-.86.287-.26.573-.26.86 0L16 20.602l7.07-7.032c.287-.26.573-.26.86 0 .26.287.26.573 0 .86l-7.5 7.5Z"
                fill-opacity="0.72"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
